--- a/app/views/kashflows/show.html.erb
+++ b/app/views/kashflows/show.html.erb
@@ -7,8 +7,12 @@
 <h2> Filter the item view by date range </h2>
 
 <%= form_with url:  @kashflow, method: :get, local: true  do |f| %>
-  start date: <%= f.date_field :start_date %>
-	end date: <%= f.date_field :end_date %>
+  start date: 
+	<%= f.date_field :start_date, 
+	  min: @kashflow.min_date, max: @kashflow.max_date %>
+	end date: 
+  <%= f.date_field :end_date,
+	  min: @kashflow.min_date, max: @kashflow.max_date %>
 	<%= f.submit "filter items" %>
 <% end %>
 
