calendar month view with cashflow items

--- a/app/views/kashflows/show.html.erb
+++ b/app/views/kashflows/show.html.erb
@@ -79,3 +79,9 @@ First item for which balance <= 0:
 
 <%= link_to 'Edit', edit_kashflow_path(@kashflow) %> |
 <%= link_to 'Back', kashflows_path %>
+
+<hr>
+
+<h2> Cashflow month view </h2>
+
+<%= render partial: 'kmonth' %>
