--- a/app/views/kashflows/show.html.erb
+++ b/app/views/kashflows/show.html.erb
@@ -8,10 +8,10 @@
 
 <%= form_with url:  @kashflow, method: :get, local: true  do |f| %>
   start date: 
-	<%= f.date_field :start_date, 
+	<%= f.date_field :start_date, value: @start_date,
 	  min: @kashflow.min_date, max: @kashflow.max_date %>
 	end date: 
-  <%= f.date_field :end_date,
+	<%= f.date_field :end_date, value: @end_date,
 	  min: @kashflow.min_date, max: @kashflow.max_date %>
 	<%= f.submit "filter items" %>
 <% end %>
