recurrent item internals

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -24,3 +24,7 @@
 
 <%= link_to 'Edit', edit_item_path(@item) %> |
 <%= link_to 'Back to cashflow', @item.kashflow %>
+
+<p id="hook">
+ the jquery hook paragraph
+</p>
