--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -25,6 +25,7 @@
 <%= link_to 'Edit', edit_item_path(@item) %> |
 <%= link_to 'Back to cashflow', @item.kashflow %>
 
-<p id="hook">
+<br />
+<div id="hook" data="<%= @item %>" >
  the jquery hook paragraph
-</p>
+</div>
