jquery toggle visibility calendar month

--- a/app/views/kashflows/_kmonth.html.erb
+++ b/app/views/kashflows/_kmonth.html.erb
@@ -1,8 +1,8 @@
-<p>
+<p class="month">
 <b> <%= month.month_name %> </b>
 </p>
 
-<table>
+<table class="month" id=<%= month.month_name %> >
 	<thead>
 		<tr>
     <% Date::DAYNAMES.each { |d| %>
